# FinaleToolkit

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  banana.txt  finaletools.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  searchindex.js  setup.py
.github/workflows/: build-docs.yml  changelog-check.yml  python-package.yml  python-publish.yml  release-prepare.yml  release-tag.yml  static.yml
Python/: frag_coverage.py
_sources/documentation/user_guide/: features.rst.txt
_sources/documentation/workflow_reference/: finaletoolkit_commands.rst.txt  key_features.rst.txt  workflow_structure.rst.txt  yaml_parameters.rst.txt
conda_env/: environment.yml  linux_env.yml  mac_env.yml
data/: BH01.chr12_asat.LWPS.raw.bedGraph  BH01_kmers.tsv  README.txt  chr12_asat_07-28-23.bw  example_intervals.bed  jiang_end_motifs.csv  jiang_end_motifs_Jul26.csv  snyder_end_motifs_Jul26.csv  wps_benchmark_7-28-23.csv
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_documentation/: index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_documentation/api_reference/: cleavageprofile.rst  fragfile.rst
docs/_documentation/cli_reference/: index.rst
docs/_documentation/user_guide/: index.rst
docs/_theme/finaletoolkit/: globaltoc.html  layout.html  theme.conf
docs/documentation/: index.rst
docs/documentation/api_reference/: basicfeatures.rst  breakpointmotifs.rst  cleavageprofile.rst  delfi.rst  exceptions.rst  genomeutils.rst  index.rst  io.rst  namespace.rst  wps.rst
docs/documentation/cli_reference/: index.rst
docs/documentation/user_guide/: features.rst  help.rst  inputdata.rst  installation.rst  quickstart.rst  what.rst
docs/documentation/workflow/: index.rst
docs/documentation/workflow_reference/: dependencies.rst  documentation.rst  features.rst  filter_file.rst  finaletoolkit_commands.rst  index.rst  installation.rst  mappability_filtering.rst  notes.rst  output_file_naming.rst  quick_start.rst
docs/source/: cli.rst  conf.py  index.rst  quick_start.rst  usage.rst
documentation/: index.html
documentation/api_reference/: basicfeatures.html  breakpointmotifs.html  cleavageprofile.html  delfi.html  endmotifs.html  fragfile.html  genomeutils.html  index.html  wps.html
documentation/cli_reference/: index.html
documentation/user_guide/: features.html  help.html  index.html  installation.html  intersectpolicy.html  quickstart.html  structure.html  what.html
documentation/workflow_reference/: filter_file.html  finaletoolkit_commands.html  notes.html  output_file_naming.html  quick_start.html  workflow_structure.html
figs/: frag_features_fig.ipynb  wps_ft_vs_shendure.csv
figs/.ipynb_checkpoints/: frag_features_fig-checkpoint.ipynb
figures/: get_data.sh
figures/2A/: FIG2A.ipynb  cmds
figures/2A/.ipynb_checkpoints/: FIG2A-checkpoint.ipynb  cmds-checkpoint
figures/2B/: FIG2B.ipynb  ctcf.commands.txt  ctcf.ipynb  submit_ctcf_jobs.sh  tss.ipynb
figures/3A/: cmds  delfi.ipynb
figures/3E/: generate_intervals.ipynb
figures/3E/.ipynb_checkpoints/: cmds-checkpoint  extract_bw-checkpoint.ipynb  generate_intervals-checkpoint.ipynb
finaletools/: finaletools.py  frag_coverage.py
scripts/: prepare_release.py
src/finaletoolkit/: __init__.py  exceptions.py  version.py
src/finaletoolkit/cli/: __init__.py  _args.py  _dispatch.py  main_cli.py
src/finaletoolkit/frag/: __init__.py  _adjust_wps.py  _breakpoint_motifs.py  _cleavage_profile.py  _coverage.py  _delfi.py  _delfi_gc_correct.py  _delfi_merge_bins.py  _end_motifs.py  _frag_length.py  _motif_common.py  _multi_wps.py  _wps.py  adjust_wps.py  agg_wps.py  cleavage_profile.py  coverage.py  delfi.py  delfi_gc_correct.py  delfi_merge_bins.py  end_motifs.py  frag_length.py  multi_wps.py  wps.py
src/finaletoolkit/genome/: __init__.py  gaps.py
src/finaletoolkit/io/: __init__.py  alignment.py  reference.py  writers.py
src/finaletoolkit/utils/: __init__.py  _agg_bw.py  _comparison.py  _deprecation.py  _filter_file.py  _frag_generator.py  _intervals.py  _parallel.py  _sort_bed_file.py  _typing.py  agg_bw.py  cli_hist.py  filter_bam.py  logging.py  typing.py  utils.py  validation.py
src/finaletools/: __init__.py  finaletools.py  frag.py  utils.py
src/finaletools/cli/: __init__.py  main_cli.py
src/finaletools/frag/: __init__.py  adjust_wps.py  agg_bw_signal.py  agg_wps.py  cleavage_profile.py  coverage.py  delfi.py  delfi_gc_correct  delfi_gc_correct.py  delfi_merge_bins.py  end_motifs.py  frag.py  frag_length.py  multi_wps.py  process_wps.py  wps.py
src/finaletools/genome/: __init__.py  gaps.py
src/finaletools/utils/: __init__.py  cli_hist.py  filter_bam.py  frag_len_hist.py  utils.py
tests/: __init__.py  scratchpad.py  test_agg_bw.py  test_cleavage_profile.py  test_cli.py  test_cli_entry.py  test_coverage.py  test_cram.py  test_delfi.py  test_delfi_merge_bins.py  test_dispatch.py  test_end_motifs.py  test_finaletools.py  test_frag_io.py  test_frag_length.py  test_gaps.py  test_io_writers.py  test_lazy_namespaces.py  test_length.py  test_logging.py  test_sort_bed_file.py  test_utils.py  test_validation.py  test_wps.py
tests/data/: 12.3444.b37.bam  12.3444.b37.bam.bai  12.3444.b37.frag.bed.gz.tbi  12.3444.b37.frag.gz.tbi  12.34443200.b37.bed  b37.chrom.sizes  bw_test.bed  end_motifs_dif.tsv  intervals.bed  intervals_overlapped.bed  test.bw  test_delfi_100kb.csv  test_delfi_5mb.csv
tests/data/delfi/: b37_darkregion.bed  hg19.chr1.10Mb.2bit  hg19.chr1.10Mb.fa.fai  hg19.chr1.6Mb.2bit  hg19.chr1.6Mb.bam.bai  hg19.chr1.6Mb.cram  hg19.chr1.6Mb.cram.crai  hg19.hic.chr1.6Mb.txt  hg19_darkregion.bed  hic_compartments_100kb_b37.txt  human.b37.autosomes.genome  human.hg19.chr1.6Mb.genome  test_delfi_100kb.csv  test_delfi_5mb.csv
tests/data/end_motifs/: end_motifs_intervals_dif.tsv
tests/data/ftk-tutorial/: FT_vs_CRISTIANO_RAW_RATIO_BH01.tsv  ft_vs_delfi.tsv
(+170 files in other folders)
