[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"finaletoolkit.frag" = ["data/*.tsv"]
"finaletoolkit.genome" = ["data/*.gz"]

[tool.setuptools_scm]
# Derives the package version from git tags/commit distance instead of a
# hardcoded string. On a tag: "1.0.0". Ahead of a tag: "1.0.1.dev4" (4
# commits past v1.0.0, guessing the next patch). `local_scheme` is set to
# drop the "+g<hash>" suffix setuptools_scm normally appends when not
# exactly on a tag, since PyPI rejects uploads whose version has a local
# segment -- CI needs a clean version string to publish dev builds.
version_file = "src/finaletoolkit/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0+unknown"

[project]
name = "FinaleToolkit"
authors = [
    { name = "James Li", email = "lijw21@wfu.edu" },
    { name = "Ravi Bandaru", email = "ravi.bandaru@northwestern.edu" },
    { name = "Yaping Liu", email = "yaping@northwestern.edu" },
]
description = "FinaleToolkit is a package and standalone program to extract fragmentation features of cell-free DNA from paired-end sequencing data."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "cell free DNA", "computational biology",
"genomics", "epigenomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=2",
    "pysam==0.24.0",
    "pybigwig==0.3.25",
    "py2bit==0.3.3",
    "tqdm==4.67.3",
    "numba==0.63.1",
    "scipy==1.15.3; python_version == '3.10'",
    "scipy==1.17.0; python_version >= '3.11'",
    "pandas>=2.3.0",
    "statsmodels==0.14.6",
    "loess==2.1.2",
    "matplotlib==3.10.8",
    "rich-click>=1.8",
]
dynamic = ["version"]

[project.scripts]
finaletoolkit = "finaletoolkit.cli.main_cli:main_cli"

[project.urls]
Homepage = "https://epifluidlab.github.io/FinaleToolkit/"
Repository = "https://github.com/epifluidlab/finaletoolkit"
Issues = "https://github.com/epifluidlab/FinaleToolkit/issues"
Changelog = "https://github.com/epifluidlab/FinaleToolkit/blob/main/CHANGELOG.md"
Wiki = "https://github.com/epifluidlab/FinaleToolkit/wiki"
"Lab Website" = "https://epifluidlab.github.io/"

[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-click", "sphinx-design"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["finaletoolkit"]
omit = ["*/finaletoolkit/_version.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
